--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+body{
+  margin: 0;
+  min-width: 320px;
+  min-height: 100vh;
+}
